--- a/Complete_Handbook%2FVersions_media_installation_concerns.mw
+++ b/Complete_Handbook%2FVersions_media_installation_concerns.mw
@@ -2,228 +2,190 @@
 
 === Gentoo versions ===
 
-One of Gentoo's major advantages is that it does not really know ''versions''. Once installed, the user has a Gentoo installation, not a Gentoo 2005.1 or 2004.3 installation. Therefore users will continue to benefit from the Gentoo development with every system update performed - there is no need to run through a specific upgrade procedure every time Gentoo makes a new release.
+One of Gentoo's major advantages is that it does not really know
+''versions''. Once installed, you have a Gentoo installation, not a Gentoo
+2005.1 or 2004.3 installation. Therefore you will continue to benefit from the
+Gentoo development with every system update you perform - there is no need to
+run through a specific upgrade procedure every time Gentoo makes a new release.
 
-This is also reflected by the pace at which Gentoo provides new installation media: through an auto-build process, new media are provided on a weekly basis (for active architectures). These auto-builds contain all the necessary media to install Gentoo with, and is also the medium that we will use throughout this handbook.
+Yes, Gentoo does ''release'' often - twice a year to be exact. Such a release
+brings you an up to date installation CD with the latest hardware drivers and
+features that might improve your installation experience. It can also contain a
+set of prebuilt packages, helping you to install Gentoo quickly and efficiently.
 
-=== Gentoo LiveDVD releases ===
+When you hear someone talk about a specific Gentoo release (''Gentoo 2005.1''
+for instance) they are talking about the installation CDs and set of prebuilt
+packages, not about the state Gentoo is at at a certain point in time. Gentoo
+evolves on a daily basis, but can't develop, package, test and release new
+installation CDs and prebuilt packages every time Gentoo changes...
 
-Occasionally, Gentoo will create a Gentoo LiveDVD from which one can play with Gentoo before installing it. These releases are announced on the [https://www.gentoo.org/ main Gentoo website].
+=== Gentoo release media ===
 
-{{Important|Understand that the Gentoo installation procedure is a ''manual'' procedure, requiring lots of input from the administrator}}
+By default, Gentoo releases installation CDs: bootable CDs allowing you to
+immediately boot in a Gentoo Linux environment containing the necessary tools to
+help you install Gentoo on your system. Such CDs shouldn't be read from any
+other operating system but immediately booted from.
 
-=== The structure of a Gentoo Linux installation ===
+For each architecture (see the note below) you will find two installation CDs: 
+a ''minimal'' installation CD and a ''universal'' one. They both contain
+the same hardware support drivers (Linux kernel and additional kernel modules)
+and tools; the universal installation CD however also contains the necessary 
+files to allow any user to install Gentoo without requiring a working Internet
+connection.
 
-Understand that the Gentoo installation procedure is quite different from most other Linux distributions: where other distributions try to perform most steps for the user, Gentoo Linux asks the user politely (but firmly) to do things actively.
+It is important to understand that:
 
-Getting the hardware up and running, configuring the network, partitioning the disk(s), copying over the initial files, building additional software (including the kernel), ... all these steps should be performed before one can finally boot in a minimal Gentoo environment. Not that all these steps can't be automated (Gentoo even offers tools to automate a few of those steps and there might still be a few unofficial installers that automate most - if not all - steps) but by documenting these steps in great detail Gentoo almost forces the user to learn various Linux-related procedures.
+* the Gentoo installation procedure is a ''manual'' procedure, requiring lots of input from the administrator
+* there is support for a networkless installation ''if'' you use the universal installation CD and the stage-3 installation approach (which will be discussed later), but that Gentoo should not be considered if you don't have a working Internet connection
+  
+You will also find a ''packages'' CD. As the name implies, this CD contains
+prebuilt packages you can quickly install to get a working Gentoo installation
+without going through much software building. 
 
-The structure of a Gentoo installation is as follows:
+''However'', these software packages are only available for those who perform
+a networkless installation and are not maintained by the Gentoo project at all:
+they are only meant for use during the initial installation of Gentoo. Once
+installed, your system is not different from any other Gentoo installation.
 
-# Download and boot a bootable system from which Gentoo can be installed
-# Prepare the disk(s) and partitions to host Gentoo
-# Download and extract the latest archive (stage file) which creates a minimal Gentoo environment to further install from
-# Chroot into this minimal Gentoo environment and install a Linux kernel, core utilities and boot loader
-# Reboot into the freshly installed Gentoo system
+This part will not talk about the networkless installation. We have decided to
+postpone any information regarding prebuilt packages to a later stage because of
+the following reasons:
 
-A huge advantage of letting the user perform all steps on their own is that the user can now decide how they want to install Gentoo - the options are there, the user needs to make a choice, over and over again. By clearly identifying the options and documenting the possible roads Gentoo hopes that the user is not scared but rather impressed.
+* The networkless installation instructions are limiting the user's choices. Only a fraction of the software which a user can (and should) install during installation is available and the user might not be able to deviate from the standard installation routine.
+* The set of prebuilt software is quickly outdated. As Gentoo does not offer a continuously maintained repository of prebuilt packages, any user who does a networkless installation might be facing an installation with insecure software for the time between the (quick) installation and (slower) upgrading.
+* The available prebuilt software differs from architecture to architecture, from release to release. If one wants to have pseudo-static documentation on the Gentoo installation procedure, such variable information should be eliminated.
+
+{{Note|An architecture is a family of CPUs who support the same instructions. The most known architecture in the desktop world is ''x86'', referring to the Intel-compatible systems. Others are ''sparc'', ''ppc'', ''mips'', ... ''amd64'' is also an architecture although it has additional Intel compatibility. If you are not sure what architecture to pick, don't hesitate to ask. Incidentally, ''amd64'' is the most common answer to that question, followed by ''x86'' :)}}
+
+== Gentoo installation approaches ==
+
+=== Introduction ===
+
+You should understand that the Gentoo installation procedure - at least the
+officially publicised one - is quite different from most other Linux
+distributions: where other distributions try to perform most steps for you,
+Gentoo Linux asks you politely (but firmly) to do things yourself.
+
+Getting the hardware up and running, configuring the network, partitioning your
+disk(s), copying over the initial files, building additional software (including
+the kernel), ... all these steps should be performed before you can finally boot
+in a minimal Gentoo environment. Not that all these steps can't be automated
+(Gentoo even offers tools to automate a few of those steps and you'll find a lot
+of unofficial installers that automate most - if not all - steps) but by
+documenting these steps in great detail Gentoo almost forces you to learn
+various Linux-related procedures.
+
+Another advantage of letting the user perform all steps himself is that the user
+can now decide himself how he wants to install Gentoo - the options are there,
+the user needs to make a choice, over and over again. By clearly identifying the
+options and documenting the possible roads Gentoo hopes that the user is not
+scared but rather impressed.
+
+For instance, Gentoo offers the user with three initial system states where the
+user can start from to install Gentoo. These states are called ''stages'':
+stage-1, stage-2 and stage-3.
+
+=== Easy and fast: stage-3 ===
+
+The stage-3 system state starts from a minimal Gentoo environment, containing
+the core system utils that anyone would need to get Gentoo up and running. This
+is the preferred initial state for most users and also the quickest way to
+install Gentoo. From this stage onward, the user installs the additional tools
+he requires (such as certain networking tools for automated IP information
+retrieval, cron jobs for scheduled process execution, system logger for keeping
+track of all log events, ...) and builds a Linux kernel to boot from.
+
+When you want to install Gentoo without a working Internet connection (the
+networkless installation approach) you must use the stage-3 approach since the
+universal installation CD only contains source code for the additional tools you
+should install - not for the tools already available in the stage file.
+
+Although the stage-3 system state is the most full-featured one, many users
+often take this as a bloated stage thinking they can't tweak as much as they can
+with the other stages. This is wrong, as you can easily rebuild the entire
+system with new (compiler and '''USE''') settings - and in many occasions 
+faster too!
+
+=== Tweaking the system: stage-2 ===
+
+The stage-2 system state contains a built and functional toolchain but no system
+utilities. This is an intermediate state between a stage-1 and stage-3 and also
+the least often used approach to install Gentoo with. Those who do consider
+using this stage often alter their profile with respect to base system 
+packages and perform major tweaks with the '''CFLAGS''', '''CXXFLAGS'''
+and '''USE''' variables.
+
+Although Gentoo offers a stage-2 initial system state, you should consider
+performing a stage-2 installation with a stage-3 initial system state. This will
+preserve you from possible circular dependency issues that are inherent with the
+stage-2 build.
+
+=== Tweaking the bootstrapping procedure: stage-1 ===
+
+The stage-1 system state contains a non-optimized toolchain with no system
+utilities. This is the state where Gentoo Release Engineering developers start
+from to move to a stage-3 state by rebuilding the toolchain for the specific
+architecture (migrating to a stage-2) and using this newly rebuilt toolchain to
+install the system core utilities (migrating to a stage-3).
+
+This state is only interesting for those attempting to change the bootstrapping
+procedure (by changing the {{Path|bootstrap.sh}} script) or want to build a
+non-default Gentoo environment (for instance using a completely different
+toolchain). 
+
+Although Gentoo offers a stage-1 initial system state, you should consider
+performing a stage-1 installation with a stage-3 initial system state. This will
+preserve you from possible circular dependency issues and bootstrapping failures
+inherent with the stage-1 procedure (which is quite complex).
 
 == Download, burn and boot ==
 
-In order to boot a medium from which Gentoo can be installed, the first thing to know is for which architecture the installation should be done.
-
-{{Note|An architecture is a family of CPUs (processors) which support the same instructions. The two most prominent architectures in the desktop world are the {{Keyword|x86}} architecture and the x86_64 architecture (for which Gentoo uses the {{Keyword|amd64}} notation). But many other architectures exist, such as {{Keyword|sparc}}, {{Keyword|ppc}} (the PowerPC family), {{Keyword|mips}}, {{Keyword|arm}}, ...}}
-
-Gentoo supports a number of architectures, namely:
-
-{| class="wikitable"
-|- style="vertical-align: top; white-space: nowrap;"
-! Architecture
-! Gentoo notation
-! Information
-! Example systems or CPUs
-|-
-| x86
-| {{Keyword|x86}}
-| A 32-bit architecture used by CPUs that are often said to be "Intel compatible". It was, until recently, the most popular architecture for desktop PCs. Gentoo offers builds for i486 (supports all families) and i686 (supports Pentium and higher or compatible). 
-| i486, i686, Intel Core, AMD Athlon, Intel Atom
-|-
-| x86_64
-| {{Keyword|amd64}}
-| A 64-bit architecture that is compatible with the {{Keyword|x86}} architecture. It was first used by AMD (under the AMD64 name) and Intel (under the EM64T name) and is now the most prominent architecture for medium and high-end desktop PCs. It is also commonly found in the server segment. 
-| AMD Athlon 64, AMD Opteron, AMD Sempron, AMD Phenom, Intel Pentium 4, Intel Core i3, Intel Core i5, Intel Core i7 
-|-
-| IA64
-| {{Keyword|ia64}}
-| A 64-bit architecture designed by Intel and used in their Intel Itanium processor series. This architecture is not compatible with {{Keyword|x86}} or x86_64 (aka {{Keyword|amd64}}) and is mostly found in medium and high-end server series. 
-| Intel Itanium
-|-
-| Sparc
-| {{Keyword|sparc}}
-| The SPARC architecture is best known by its most common producers, Sun (now Oracle) and Fujitsu. It is used in server systems although a few workstations exist as well. In Gentoo, only SPARC64 compatible CPUs are supported. 
-| E3000, Blade 1000, Ultra 2
-|-
-| PowerPC
-| {{Keyword|ppc}}
-| A 32-bit architecture used by many Apple, IBM and Motorola processors. They are most commonly found in embedded systems.
-| Apple OldWorld, Apple NewWorld, Genesi Pegasos, Efika, older IBM iSeries and pSeries 
-|-
-| PowerPC 64
-| {{Keyword|ppc64}}
-| The 64-bit variant of the PPC architecture, popular in both embedded as well as high-end performance servers. 
-| IBM RS/6000s, IBM pSeries, IBM iSeries
-|-
-| Alpha
-| {{Keyword|alpha}}
-| The Alpha architecture is a 64-bit architecture developed by Digital Equipment Corporation (DEC). It is still in use by some mid-range and high-end servers, but the architecture is slowly being faded out. 
-| ES40, AlphaPC, UP1000, Noname 
-|-
-| PA-RISC
-| {{Keyword|hppa}}
-| Referred to as HPPA, the PA-RISC architecture is an instruction set developed by Hewlett-Packard and was used in their mid- and high-end server series until about 2008 (after which HP started using Intel Itanium) 
-| HP 9000, PA-8600
-|-
-| MIPS
-| {{Keyword|mips}}
-| Developed by MIPS Technologies, the MIPS architecture entails multiple subfamilies (called revisions) such as MIPS I, MIPS III, MIPS32, MIPS64 and more. MIPS is most common in embedded systems.
-| MIPS32 1074K, R16000
-|-
-| ARM
-| {{Keyword|arm}}
-| This 32-bit architecture is a very popular architecture for embedded and small systems. Subarchitectures range from ARMv1 to ARMv7 (Cortex) and are often found in smartphones, tablets, handheld consoles, end-user GPS navigation systems, etc.
-| StrongARM, Cortex-M
-|}
-
-In this handbook, we focus on the {{Complete Handbook Variable|architecture}} architecture.
-
 === Download the media ===
 
-The default installation media that Gentoo Linux uses are the ''minimal installation CDs'', which host a bootable, very small Gentoo Linux environment with the right tools to install Gentoo Linux from. The CD images themselves can be downloaded from one of the many [https://www.gentoo.org/downloads/mirrors/ mirrors] available.
+With the information handed to you in the previous sections you should have an
+idea what CD(s) you need to download. Gentoo provides the CDs both as an
+[http://www.gentoo.org/main/en/mirrors.xml FTP/HTTP download] 
+or through the [http://torrents.gentoo.org BitTorrent]
+peer-to-peer network. Pick the latest version available (as that one contains
+the most up-to-date hardware support and additional features) although this is
+not mandatory: you can easily install a (current) Gentoo from an older
+installation CD. 
 
-On those mirrors, the minimal installation CDs can be found as follows:
-# Go to the {{Path|releases/}} directory
-# Select the right architecture, such as {{Path|{{Complete Handbook Variable|architecture}}/}}
-# Select the {{Path|autobuilds/}} directory
-# Select the {{Path|current-iso/}} directory
+As the directory structure on the FTP/HTTP mirrors suggests, you'll find the 
+CDs in the {{Path|releases/}} directory.
 
-Inside this location, the installation CD file is the file with the {{Path|.iso}} suffix. For instance, take a look at the following listing:
-{{CodeBox|title=Example list of downloadable files at releases/{{Complete Handbook Variable|architecture}}/autobuilds/current-iso/|
-[DIR] hardened/                                          05-Dec-2014 01:42    -   
-[   ] install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso                 04-Dec-2014 21:04  208M  
-[   ] install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso.CONTENTS        04-Dec-2014 21:04  3.0K  
-[   ] install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso.DIGESTS         04-Dec-2014 21:04  740   
-[TXT] install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso.DIGESTS.asc     05-Dec-2014 01:42  1.6K  
-[   ] stage3-{{Complete Handbook Variable|architecture}}-20141204.tar.bz2                      04-Dec-2014 21:04  198M  
-[   ] stage3-{{Complete Handbook Variable|architecture}}-20141204.tar.bz2.CONTENTS             04-Dec-2014 21:04  4.6M  
-[   ] stage3-{{Complete Handbook Variable|architecture}}-20141204.tar.bz2.DIGESTS              04-Dec-2014 21:04  720   
-[TXT] stage3-{{Complete Handbook Variable|architecture}}-20141204.tar.bz2.DIGESTS.asc          05-Dec-2014 01:42  1.5K
-}}
+Each CD is fully contained within an ISO file. Such a file contains all the
+content of a CD and should be burned on the CD using a specific (but well
+supported) procedure. Most CD/DVD burning tools call it ''Burn ISO'' or
+''Raw burning''; it differs from the regular burning methods used that it
+burns the content of the file on the CD, not the file as-is (i.e. the end result
+is not that you just see the single file on the burnt CD).
 
-In the above example, the {{Path|install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso}} file is the minimal installation CD itself. But as can be seen, other related files exist as well:
-* A {{Path|.CONTENTS}} file which is a text file listing all files available on the installation CD. This file can be useful to verify if particular firmware or drivers are available on the installation CD before downloading it.
-* A {{Path|.DIGESTS}} file which contains the hash of the ISO file itself, in various hashing formats/algorithms. This file can be used to verify if the downloaded ISO file is corrupt or not.
-* A {{Path|.DIGESTS.asc}} file which not only contains the hash of the ISO file, like the {{Path|.DIGESTS}} file, but also a cryptographic signature of that file. This can be used to both verify if the downloaded ISO file is corrupt or not, as well as verify that the download is indeed provided by the Gentoo Release Engineering team and has not been tampered with.
+If you want, you can verify the downloaded ISO file using the {{Path|.md5}}
+file we provide. This file contains an Message Digest 5 checksum of the file, a
+known mathematical result of the entire CD that is practically unique to every
+file. In other words, you won't find a file anywhere with the same checksum
+unless that file is identical. Under Linux, you can use the '''md5sum''' tool
+to verify the checksum.
 
-Ignore the other files available at this location for now - those will come back when the installation has proceeded further. Download the {{Path|.iso}} file and, if verification of the download is wanted, download the  {{Path|.DIGESTS.asc}} file for the ISO file as well. The {{Path|.CONTENTS}} file does not need to be downloaded as the installation instructions will not refer to this file anymore, and the {{Path|.DIGESTS}} file should contain the same information as the {{Path|.DIGESTS.asc}} file, except that the latter also contains a signature on top of it.
-
-=== Verifying the downloaded files ===
-
-{{Note|This is an optional step and not necessary to install Gentoo Linux. However, it is recommended as it ensures that the downloaded file is not corrupt and has indeed been provided by the Gentoo Infrastructure team.}}
-
-Through the {{Path|.DIGESTS}} and {{Path|.DIGESTS.asc}} files, the validity of the ISO file can be confirmed using the right set of tools. This verification is usually done in two steps:
-# First, the cryptographic signature is validated to make sure that the installation file is provided by the Gentoo Release Engineering team
-# If the cryptographic signature validates, then the checksum is verified to make sure that the downloaded file itself is not corrupted
-
-==== Microsoft Windows based verification ====
-
-On a Microsoft Windows system, chances are low that the right set of tools to verify checksums and cryptographic signatures are in place.
-
-To first verify the cryptographic signature, tools such as [https://www.gpg4win.org/ GPG4Win] can be used. After installation, the public keys of the Gentoo Release Engineering team need to be imported. The list of keys is available on the [[Project:RelEng|release engineering page]]. Once imported, the user can then verify the signature of the {{Path|.DIGESTS.asc}} file.
-
-{{Important|This does not verify that the {{Path|.DIGESTS}} file is correct, only that the {{Path|.DIGESTS.asc}} file is. That also implies that the checksum should be verified against the values in the {{Path|.DIGESTS.asc}} file, which is why the instructions above only refer to downloading the {{Path|.DIGESTS.asc}} file.}}
-
-The checksum itself can be verified using the [https://sourceforge.net/projects/deepdigest/ DeepDigest] application, although many others exist as well (see [https://en.wikipedia.org/wiki/Comparison_of_file_verification_software this] Wikipedia article for details). Most of the time, these tools will show the user the calculated checksum, and the user is requested to verify this checksum with the value that is inside the {{Path|.DIGESTS.asc}} file.
-
-==== Linux based verification ====
-
-On a Linux system, the most common method for verifying the cryptographic signature is to use the {{Package|app-crypt/gnupg}} software. With this package installed, the following commands can be used to verify the cryptographic signature of the {{Path|.DIGESTS.asc}} file.
-
-First, download the right set of keys as made available on the [[Project:RelEng|release engineering page]]:
-
-{{Cmd|gpg --recv-keys 0xBB572E0E2D182910|output=<pre>
-gpg: requesting key 0xBB572E0E2D182910 from hkp server pool.sks-keyservers.net
-gpg: key 0xBB572E0E2D182910: "Gentoo Linux Release Engineering (Automated Weekly Release Key) <releng@gentoo.org>" 1 new signature
-gpg: 3 marginal(s) needed, 1 complete(s) needed, classic trust model
-gpg: depth: 0  valid:   3  signed:  20  trust: 0-, 0q, 0n, 0m, 0f, 3u
-gpg: depth: 1  valid:  20  signed:  12  trust: 9-, 0q, 0n, 9m, 2f, 0u
-gpg: next trustdb check due at 2018-09-15
-gpg: Total number processed: 1
-gpg:         new signatures: 1
-</pre>}}
-
-Next verify the cryptographic signature of the {{Path|.DIGESTS.asc}} file:
-
-{{Cmd|gpg --verify install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso.DIGESTS.asc|output=<pre>
-gpg: Signature made Fri 05 Dec 2014 02:42:44 AM CET
-gpg:                using RSA key 0xBB572E0E2D182910
-gpg: Good signature from "Gentoo Linux Release Engineering (Automated Weekly Release Key) <releng@gentoo.org>" [unknown]
-gpg: WARNING: This key is not certified with a trusted signature!
-gpg:          There is no indication that the signature belongs to the owner.
-Primary key fingerprint: 13EB BDBE DE7A 1277 5DFD  B1BA BB57 2E0E 2D18 2910
-</pre>}}
-
-To be absolutely certain that everything is valid, verify the fingerprint shown with the fingerprint on the [[Project:RelEng|Gentoo release engineering page]].
-
-With the cryptographic signature validated, next verify the checksum to make sure the downloaded ISO file is not corrupted. The {{Path|.DIGESTS.asc}} file contains multiple hashing algorithms, so one of the methods to validate the right one is to first look at the checksum registered in the {{Path|.DIGESTS.asc}} file. For instance, to get the SHA512 checksum:
-
-{{Cmd|grep -A 1 -i sha512 install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso.DIGESTS.asc|output={{#tag:pre|
-# SHA512 HASH
-364d32c4f8420605f8a9fa3a0fc55864d5b0d1af11aa62b7a4d4699a427e5144b2d918225dfb7c5dec8d3f0fe2cddb7cc306da6f0cef4f01abec33eec74f3024  install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso
---
-# SHA512 HASH
-0719a8954dc7432750de2e3076c8b843a2c79f5e60defe43fcca8c32ab26681dfb9898b102e211174a895ff4c8c41ddd9e9a00ad6434d36c68d74bd02f19b57f  install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso.CONTENTS
-}}}}
-
-In the above output, two SHA512 checksums are shown - one for the {{Path|install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso}} file and one for its accompanying {{Path|.CONTENTS}} file. Only the first checksum is of interest, as it needs to be compared with the calculated SHA512 checksum which can be generated as follows:
-
-{{Cmd|sha512sum install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso|output={{#tag:pre|
-364d32c4f8420605f8a9fa3a0fc55864d5b0d1af11aa62b7a4d4699a427e5144b2d918225dfb7c5dec8d3f0fe2cddb7cc306da6f0cef4f01abec33eec74f3024  install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso
-}}}}
-
-As both checksums match, the file is not corrupted and the installation can continue.
-
-=== Burning ===
-
-Of course, with just an ISO file downloaded, the Gentoo Linux installation cannot be started. The ISO file needs to be burned on a CD to boot from, and in such a way that its ''contents'' is burned on the CD, not just the file itself. Below a few common methods are described - a more elaborate set of instructions can be found in [[FAQ#How_do_I_burn_an_ISO_file.3F|Our FAQ on burning an ISO file]].
-
-{{Note|If you wish to burn to USB there is also the ability to do that, there is an [[LiveUSB/Guide|excellently written article]] explaining how to do so}}
-
-==== Burning with Microsoft Windows ====
-
-On Microsoft Windows, a number of tools exist that support burning ISOs on CDs.
-
-* With EasyCD Creator, select ''File'', ''Record CD from CD image''. Then change the ''Files of type'' to ''ISO image file''. Then locate the ISO file and click ''Open''. After clicking on ''Start recording'' the ISO image will be burned correctly onto the CD-R.
-* With Nero Burning ROM, cancel the wizard which automatically pops up and select ''Burn Image'' from the ''File'' menu. Select the image to burn and click ''Open''. Now hit the ''Burn'' button and watch the brand new CD being burnt.
-
-==== Burning with Linux ====
-
-On Linux, the ISO file can be burned on a CD using the <code>cdrecord</code> command, part of the {{Package|app-cdr/cdrtools}} package.
-
-For instance, to burn the ISO file on the CD in the {{Path|/dev/sr0}} device (this is the first CD device on the system - substitute with the right device file if necessary):
-
-{{Cmd|cdrecord dev{{=}}/dev/sr0 install-{{Complete Handbook Variable|architecture}}-minimal-20141204.iso}}
-
-Users that prefer a graphical user interface can use K3B, part of the {{Package|kde-apps/k3b}} package. In K3B, go to ''Tools'' and use ''Burn CD Image''. Then follow the instructions provided by K3B.
+We also provide a digital signature of the file made with our private Release
+Engineering key. This digital signature can be used to validate the origin of
+the ISO file: if the digital signature matches the public key of the Release
+Engineering team, then the file is authentic. Under Linux, you can use the
+'''gpg''' tool to verify the checksum.
 
 === Booting the CD ===
 
-With the CD burned, the installation of Gentoo Linux can now commence. Put the CD in the drive and reboot the system, making sure that the system now boots from the CD.
+To get in the initial Gentoo environment, you need to boot from the installation
+CD. How to achieve this depends on the architecture you are using. The first
+appendix in this book covers the various architecture-specific aspects of a
+Linux system, including booting CDs.
 
-On most systems, it is possible to change the boot order at boot time once, such as by pressing {{Key|F5}}, {{Key|F8}} or {{Key|Esc}} (Escape) before the system starts booting the operating system. How to achieve this is specific to each system, so consult the system documentation of the computer if uncertain.
+Once booted, you will see that the installation CD already tried to load the
+necessary drivers and hands you over to a ''root prompt'', indicating that
+the system is waiting for further input:
 
-Once booted, the installation CD will greet the user with a ''root prompt'', indicating that the system is waiting for further input:
-{{RootCmd|&nbsp;}}
+{{RootCmd| }}
 
-This is the command-line prompt which will be used to install Gentoo Linux from in the next set of sections.
-
-[[Category:Complete Handbook]]
+This is the command-line prompt. You are now booted in the initial Gentoo
+environment, ready to continue.
